trying to draw something. // nothing is working